--- a/upload/package.json
+++ b/upload/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@stemn/upload",
-  "version": "1.0.0",
-  "description": "A container for uploading files from a Stemn pipeline to a project.",
+  "version": "0.0.1",
+  "description": "A container for uploading output files from a pipeline back to Stemn.",
   "main": "src",
   "scripts": {
     "start": "babel-node --presets env,stage-2 src",
