--- a/cadquery/Dockerfile
+++ b/cadquery/Dockerfile
@@ -1,4 +1,11 @@
 FROM dcowden/cadquery
 
 USER root
+
+RUN apt-get update \
+    && apt-get install -y gosu \
+    && rm -rf /var/lib/apt/lists/*
+
+RUN useradd -M --user-group pipeline
+
 WORKDIR /pipeline
