--- a/upload/Dockerfile
+++ b/upload/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:alpine
+FROM stemn/pipeline-base:latest
 
 WORKDIR /app
 
@@ -6,6 +6,6 @@ ADD package.json package.json
 ADD yarn.lock yarn.lock
 RUN yarn
 
-ADD src src
+ADD dist dist
 
 ENTRYPOINT yarn start
