add new types, cadquery works

--- a/cadquery/Dockerfile
+++ b/cadquery/Dockerfile
@@ -1,6 +1,11 @@
 FROM dcowden/cadquery
 
 USER root
-RUN chown -R 4001:4001 /home/cq /opt/cadquery
+
+# make the cq user uid and gid the same as the pipeline user
+RUN sed -i 's/1000:1000/4001:4001/' /etc/passwd
+RUN sed -i 's/1000/4001/' /etc/group
+
+USER cq
 
 WORKDIR /pipeline
