--- a/upload/package.json
+++ b/upload/package.json
@@ -22,7 +22,7 @@
   "dependencies": {
     "archiver": "^2.1.1",
     "fs-extra": "^5.0.0",
-    "hyperquest-promise": "^0.0.2",
+    "hyperquest-promise": "https://github.com/sabrehagen/hyperquest-promise",
     "micromatch": "^3.1.9",
     "request": "^2.83.0",
     "request-promise": "^4.2.2"
