--- a/pipeline-base/Dockerfile
+++ b/pipeline-base/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine:3.7
+FROM node:8.11-alpine
 
 ENV STEMN_PIPELINE_GID 4001
 ENV STEMN_PIPELINE_GROUP pipeline
@@ -8,7 +8,7 @@ ENV YARN_CACHE_PATH /.yarn-cache
 
 RUN apk add --no-cache \
     --repository http://dl-3.alpinelinux.org/alpine/edge/testing \
-    gosu nodejs-current yarn
+    gosu tree
 
 # make the environment directories
 RUN mkdir $YARN_CACHE_PATH
