--- a/packages/upload/package.json
+++ b/packages/upload/package.json
@@ -6,7 +6,7 @@
     "build": "yarn build:project && yarn build:container",
     "build:container": "docker build -t stemn/upload .",
     "build:project": "tsc",
-    "release": "npm publish",
+    "release": "bump --tag --push",
     "start": "ts-node"
   },
   "main": "dist",
