--- a/package.json
+++ b/package.json
@@ -23,11 +23,15 @@
   },
   "homepage": "https://github.com/stemn/stemn-pipeline-containers#readme",
   "devDependencies": {
+    "jest": "^23.2.0",
     "lerna": "^2.11.0",
+    "ts-jest": "^23.0.0",
     "ts-node": "^7.0.0",
     "tslint": "^5.10.0",
     "tslint-config-temando": "^1.5.11",
     "typescript": "^2.9.2"
   },
-  "workspaces": ["packages/*"]
+  "workspaces": [
+    "packages/*"
+  ]
 }
