--- a/packages/upload/package.json
+++ b/packages/upload/package.json
@@ -3,10 +3,16 @@
   "version": "0.0.8",
   "description": "A container for uploading output files from a pipeline back to Stemn.",
   "scripts": {
+    "test": "jest",
+    "test:coverage": "yarn test --coverage",
     "build": "yarn build:project && yarn build:container",
     "build:container": "docker build -t stemn/upload .",
     "build:project": "tsc",
     "release": "bump --tag --push",
+    "changelog:verify": "changelog-verify CHANGELOG.md",
+    "changelog:version": "version-changelog CHANGELOG.md && git add CHANGELOG.md",
+    "preversion": "yarn build && yarn test:coverage && yarn changelog:verify",
+    "version": "yarn changelog:version",
     "start": "ts-node"
   },
   "main": "dist",
@@ -33,7 +39,11 @@
     "@types/fs-extra": "^5.0.1",
     "@types/micromatch": "^3.1.0",
     "@types/node": "^9",
+    "changelog-verify": "^1.1.0",
+    "jest": "^23.2.0",
+    "ts-jest": "^23.0.0",
     "typescript": "^2.9.2",
-    "version-bump-prompt": "^4.0.0"
+    "version-bump-prompt": "^4.0.0",
+    "version-changelog": "^3.1.0"
   }
 }
