--- a/email/package.json
+++ b/email/package.json
@@ -1,32 +1,21 @@
 {
   "name": "@stemn/email",
   "version": "1.0.0",
-  "description": "A container for emailing files and results of a Stemn pipeline.",
-  "scripts": {
-    "build": "yarn build:typescript && yarn build:container",
-    "build:container": "docker build -t stemn/email .",
-    "build:typescript": "sh -v -e scripts/build.sh",
-    "release": "bump --tag --push",
-    "start": "node dist"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/stemn/stemn-pipeline-containers.git"
-  },
-  "author": "Jackson Delahunt",
+  "description": "A container to send emails from a Stemn pipeline",
+  "main": "index.js",
+  "repository": "https://github.com/stemn/stemn-pipeline-containers",
+  "author": "Caspian Baska",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/stemn/stemn-pipeline-containers/issues"
-  },
-  "homepage": "https://github.com/stemn/stemn-pipeline-containers#readme",
-  "dependencies": {
-    "request": "^2.83.0",
-    "request-promise": "^4.2.2"
-  },
   "devDependencies": {
-    "@types/node": "^9.4.7",
-    "nodemon": "^1.14.12",
-    "typescript": "^2.7.2",
-    "version-bump-prompt": "^4.0.0"
+    "@types/bluebird": "^3.5.21",
+    "@types/markdown-it": "^0.0.4",
+    "@types/node": "^10.5.1",
+    "tslint-config-temando": "^1.5.11",
+    "typescript": "^2.9.2"
+  },
+  "dependencies": {
+    "bluebird": "^3.5.1",
+    "fs-extra": "^6.0.1",
+    "markdown-it": "^8.4.1"
   }
 }
