--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "tslint": "^5.9.1",
     "tslint-config-temando": "^1.5.11",
     "typescript": "^2.7.2"
+  },
+  "dependencies": {
+    "axios": "^0.18.0"
   }
 }
