--- a/packages/email/tsconfig.json
+++ b/packages/email/tsconfig.json
@@ -1,27 +1,9 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "esModuleInterop": true,
-    "target": "es6",
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "noImplicitAny": true,
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
-    "outDir": "./dist",
-    "declaration": true,
-    "sourceMap": true,
-    "strictNullChecks": true,
-    "pretty": true,
-    "noUnusedLocals": true,
-    "lib": [
-      "es2015"
-    ]
+    "outDir": "dist"
   },
-  "exclude": [
-    "dist",
-  ],
   "include": [
-    "**/*",
-    "typings.d.ts"
+    "src", "typings.d.ts"
   ]
 }
