--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/stemn/stemn-pipeline-containers#readme",
   "devDependencies": {
+    "@types/jest": "^23.1.3",
     "lerna": "^2.11.0"
   },
   "workspaces": [
