--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,7 @@
 {
   "lerna": "2.11.0",
   "packages": [
-    "packages/*"
+    "containers/*"
   ],
   "npmClient": "yarn",
   "useWorkspaces": true,
