persist everything to workspace

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
       - run: yarn lerna run build
       - persist_to_workspace:
           root: '.'
-          paths: ["**/build"]
+          paths: ["*"]
 
   lintTest:
     <<: *defaults
