--- a/packages/email/package.json
+++ b/packages/email/package.json
@@ -22,21 +22,25 @@
   "author": "Jackson Delahunt",
   "license": "MIT",
   "dependencies": {
+    "@types/micromatch": "^3.1.0",
     "bluebird": "^3.5.1",
     "fs-extra": "^6.0.1",
+    "klaw": "^2.1.1",
     "markdown-it": "^8.4.1",
+    "micromatch": "^3.1.10",
     "request": "^2.83.0",
     "request-promise": "^4.2.2"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.21",
+    "@types/klaw": "^2.1.1",
     "@types/markdown-it": "^0.0.4",
     "@types/node": "^10.5.1",
-    "tslint-config-temando": "^1.5.11",
-    "typescript": "^2.9.2",
     "jest": "^23.2.0",
     "nodemon": "^1.14.12",
     "ts-jest": "^23.0.0",
+    "tslint-config-temando": "^1.5.11",
+    "typescript": "^2.9.2",
     "version-bump-prompt": "^4.0.0"
   }
 }
