--- a/containers/email/package.json
+++ b/containers/email/package.json
@@ -14,7 +14,7 @@
     "changelog:version": "version-changelog CHANGELOG.md && git add CHANGELOG.md",
     "preversion": "yarn build && yarn test:coverage && yarn changelog:verify",
     "version": "yarn changelog:version",
-    "start": "ts-node"
+    "start": "ts-node scripts/sendEmail.ts"
   },
   "repository": {
     "type": "git",
@@ -32,9 +32,7 @@
   },
   "devDependencies": {
     "@types/node": "^9.4.7",
-    "jest": "^23.2.0",
     "nodemon": "^1.14.12",
-    "ts-jest": "^23.0.0",
     "typescript": "^2.7.2",
     "version-bump-prompt": "^4.0.0"
   }
