--- a/containers/upload/package.json
+++ b/containers/upload/package.json
@@ -14,9 +14,8 @@
     "changelog:version": "version-changelog CHANGELOG.md && git add CHANGELOG.md",
     "preversion": "yarn build && yarn test:coverage && yarn changelog:verify",
     "version": "yarn changelog:version",
-    "start": "ts-node"
+    "start": "ts-node scripts/uploadFiles.ts"
   },
-  "main": "dist",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/stemn/stemn-pipeline-containers.git"
@@ -41,8 +40,6 @@
     "@types/micromatch": "^3.1.0",
     "@types/node": "^9",
     "changelog-verify": "^1.1.0",
-    "jest": "^23.2.0",
-    "ts-jest": "^23.0.0",
     "typescript": "^2.9.2",
     "version-bump-prompt": "^4.0.0",
     "version-changelog": "^3.1.0"
