--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "lint": "yarn lerna run lint",
     "changelog:verify": "yarn lerna run changelog:verify",
-    "test": "yarn lerna run test",
+    "test": "yarn jest",
     "test:coverage": "yarn lerna run test:coverage",
     "build": "yarn lerna run build"
   },
@@ -28,7 +28,10 @@
   "homepage": "https://github.com/stemn/stemn-pipeline-containers#readme",
   "devDependencies": {
     "@types/jest": "^23.1.3",
-    "lerna": "^2.11.0"
+    "jest": "^23.2.0",
+    "lerna": "^2.11.0",
+    "ts-jest": "^23.0.0",
+    "typescript": "^2.9.2"
   },
   "workspaces": [
     "containers/*"
