--- a/containers/email/package.json
+++ b/containers/email/package.json
@@ -22,14 +22,15 @@
   "author": "Jackson Delahunt",
   "license": "MIT",
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/micromatch": "^3.1.0",
+    "axios": "^0.18.0",
     "bluebird": "^3.5.1",
     "fs-extra": "^6.0.1",
     "klaw": "^2.1.1",
     "markdown-it": "^8.4.1",
     "micromatch": "^3.1.10",
-    "request": "^2.83.0",
-    "request-promise": "^4.2.2"
+    "request": "^2.83.0"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.21",
