add tests for slack, minor changes to send(Email|Slack)

--- a/containers/cadquery/package.json
+++ b/containers/cadquery/package.json
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/stemn/stemn-pipeline-containers#readme",
   "devDependencies": {
+    "@types/nock": "^9.3.0",
+    "nock": "^9.4.1",
     "version-bump-prompt": "^4.0.0"
-  },
-  "dependencies": {}
+  }
 }
