--- a/containers/email/package.json
+++ b/containers/email/package.json
@@ -37,8 +37,10 @@
     "@types/bluebird": "^3.5.21",
     "@types/klaw": "^2.1.1",
     "@types/markdown-it": "^0.0.4",
+    "@types/nock": "^9.3.0",
     "@types/node": "^10.5.1",
     "jest": "^23.2.0",
+    "nock": "^9.4.1",
     "nodemon": "^1.14.12",
     "ts-jest": "^23.0.0",
     "tslint-config-temando": "^1.5.11",
