--- a/containers/upload/package.json
+++ b/containers/upload/package.json
@@ -38,8 +38,10 @@
     "@types/archiver": "^2.1.1",
     "@types/fs-extra": "^5.0.1",
     "@types/micromatch": "^3.1.0",
+    "@types/nock": "^9.3.0",
     "@types/node": "^9",
     "changelog-verify": "^1.1.0",
+    "nock": "^9.4.1",
     "typescript": "^2.9.2",
     "version-bump-prompt": "^4.0.0",
     "version-changelog": "^3.1.0"
