--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   },
   "homepage": "https://github.com/stemn/stemn-pipeline-containers#readme",
   "devDependencies": {
+    "@stemn/tsconfig": "^0.0.1",
+    "@stemn/tslint-config": "^0.0.2",
     "@types/jest": "^23.1.3",
     "jest": "^23.2.0",
     "lerna": "^2.11.0",
