--- a/containers/upload/package.json
+++ b/containers/upload/package.json
@@ -42,6 +42,7 @@
     "@types/node": "^9",
     "changelog-verify": "^1.1.0",
     "nock": "^9.4.1",
+    "tslint": "^5.10.0",
     "typescript": "^2.9.2",
     "version-bump-prompt": "^4.0.0",
     "version-changelog": "^3.1.0"
