--- a/containers/slack/package.json
+++ b/containers/slack/package.json
@@ -2,10 +2,11 @@
   "name": "@stemn/slack",
   "version": "1.0.0",
   "description": "A container for sending Slack notifications from a Stemn pipeline",
+  "main": "dist",
   "scripts": {
     "build": "yarn build:typescript && yarn build:container",
     "build:container": "docker build -t stemn/email .",
-    "build:typescript": "sh -v -e scripts/build.sh",
+    "build:typescript": "tsc",
     "release": "bump --tag --push",
     "start": "node dist"
   },
@@ -20,6 +21,7 @@
   },
   "homepage": "https://github.com/stemn/stemn-pipeline-containers#readme",
   "dependencies": {
+    "@stemn/pipeline-logger": "^0.0.2",
     "request-promise": "^4.2.2"
   },
   "devDependencies": {
