--- a/containers/slack/tsconfig.json
+++ b/containers/slack/tsconfig.json
@@ -1,27 +1,8 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "esModuleInterop": true,
-    "target": "es6",
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "noImplicitAny": true,
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
-    "outDir": "./dist",
-    "declaration": true,
-    "sourceMap": true,
-    "strictNullChecks": true,
-    "pretty": true,
-    "noUnusedLocals": true,
-    "lib": [
-      "es2015"
-    ]
+    "outDir": "dist",
+    "noEmit": false
   },
-  "exclude": [
-    "dist",
-  ],
-  "include": [
-    "**/*",
-    "typings.d.ts"
-  ]
+  "include": ["**/*ts"]
 }
