--- a/containers/upload/package.json
+++ b/containers/upload/package.json
@@ -2,6 +2,7 @@
   "name": "@stemn/upload",
   "version": "0.0.8",
   "description": "A container for uploading output files from a pipeline back to Stemn.",
+  "main": "dist",
   "scripts": {
     "test": "jest",
     "test:coverage": "yarn test --coverage",
@@ -27,6 +28,7 @@
   },
   "homepage": "https://github.com/stemn/stemn-pipeline-containers#readme",
   "dependencies": {
+    "@stemn/pipeline-logger": "^0.0.2",
     "archiver": "^2.1.1",
     "fs-extra": "^5.0.0",
     "hyperquest-promise": "^0.0.3",
