--- a/containers/email/package.json
+++ b/containers/email/package.json
@@ -28,6 +28,7 @@
     "axios": "^0.18.0",
     "bluebird": "^3.5.1",
     "fs-extra": "^6.0.1",
+    "graceful-fs": "^4.1.11",
     "klaw": "^2.1.1",
     "markdown-it": "^8.4.1",
     "micromatch": "^3.1.10",
@@ -37,11 +38,15 @@
     "@types/bluebird": "^3.5.21",
     "@types/klaw": "^2.1.1",
     "@types/markdown-it": "^0.0.4",
+    "@types/mock-fs": "^3.6.30",
     "@types/nock": "^9.3.0",
     "@types/node": "^10.5.1",
+    "graceful-fs": "^4.1.11",
     "jest": "^23.2.0",
+    "mock-fs": "^4.5.0",
     "nock": "^9.4.1",
     "nodemon": "^1.14.12",
+    "prettier": "^1.13.7",
     "ts-jest": "^23.0.0",
     "tslint-config-temando": "^1.5.11",
     "typescript": "^2.9.2",
