--- a/containers/slack/package.json
+++ b/containers/slack/package.json
@@ -26,8 +26,10 @@
     "@types/axios": "^0.14.0",
     "@types/nock": "^9.3.0",
     "@types/node": "^10.5.1",
+    "mock-fs": "^4.5.0",
     "nock": "^9.4.1",
     "nodemon": "^1.14.12",
+    "prettier": "^1.13.7",
     "tslint-config-temando": "^1.5.11",
     "typescript": "^2.9.2",
     "version-bump-prompt": "^4.0.0"
