--- a/containers/upload/package.json
+++ b/containers/upload/package.json
@@ -41,7 +41,9 @@
     "@types/nock": "^9.3.0",
     "@types/node": "^9",
     "changelog-verify": "^1.1.0",
+    "mock-fs": "^4.5.0",
     "nock": "^9.4.1",
+    "prettier": "^1.13.7",
     "typescript": "^2.9.2",
     "version-bump-prompt": "^4.0.0",
     "version-changelog": "^3.1.0"
