--- a/containers/email/package.json
+++ b/containers/email/package.json
@@ -32,6 +32,7 @@
     "fs-extra": "^6.0.1",
     "graceful-fs": "^4.1.11",
     "klaw": "^2.1.1",
+    "klaw-sync": "^4.0.0",
     "markdown-it": "^8.4.1",
     "micromatch": "^3.1.10",
     "request": "^2.83.0"
@@ -39,6 +40,7 @@
   "devDependencies": {
     "@types/bluebird": "^3.5.21",
     "@types/klaw": "^2.1.1",
+    "@types/klaw-sync": "^2.0.0",
     "@types/markdown-it": "^0.0.4",
     "@types/mock-fs": "^3.6.30",
     "@types/nock": "^9.3.0",
