--- a/containers/slack/package.json
+++ b/containers/slack/package.json
@@ -7,6 +7,7 @@
     "build": "yarn build:typescript && yarn build:container",
     "build:container": "docker build -t stemn/email .",
     "build:typescript": "tsc",
+    "build:watch": "tsc --watch",
     "release": "bump --tag --push",
     "start": "node dist"
   },
