--- a/containers/upload/package.json
+++ b/containers/upload/package.json
@@ -7,9 +7,10 @@
     "test": "jest",
     "test:coverage": "yarn test --coverage",
     "lint": "tslint --project tsconfig.json",
-    "build": "yarn build:project && yarn build:container",
+    "build": "yarn build:typescript && yarn build:container",
     "build:container": "docker build -t stemn/upload .",
-    "build:project": "tsc",
+    "build:typescript": "tsc",
+    "build:watch": "tsc --watch",
     "release": "bump --tag --push",
     "changelog:verify": "changelog-verify CHANGELOG.md",
     "changelog:version": "version-changelog CHANGELOG.md && git add CHANGELOG.md",
