--- a/libraries/logger/package.json
+++ b/libraries/logger/package.json
@@ -8,7 +8,8 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "build:watch": "tsc --watch"
   },
   "dependencies": {
     "chalk": "^2.4.1"
