change dist to build, fix docker container building

--- a/containers/email/package.json
+++ b/containers/email/package.json
@@ -6,9 +6,9 @@
     "test": "jest",
     "test:coverage": "yarn test --coverage",
     "lint": "tslint --project tsconfig.json",
-    "build": "yarn build:project && yarn build:container",
+    "build": "yarn build:typescript && yarn build:container",
     "build:container": "docker build -t stemn/email .",
-    "build:project": "tsc",
+    "build:typescript": "tsc",
     "release": "bump --tag --push",
     "changelog:verify": "changelog-verify CHANGELOG.md",
     "changelog:version": "version-changelog CHANGELOG.md && git add CHANGELOG.md",
