--- a/containers/pipeline-base/Dockerfile
+++ b/containers/pipeline-base/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:8.11-alpine
+FROM node:10-alpine
 
 ENV STEMN_PIPELINE_GID 4001
 ENV STEMN_PIPELINE_GROUP pipeline
@@ -8,11 +8,11 @@ ENV YARN_CACHE_PATH /.yarn-cache
 
 RUN apk add --no-cache \
     --repository http://dl-3.alpinelinux.org/alpine/edge/testing \
-    gosu tree
+    gosu \
+    tree
 
 # make the environment directories
 RUN mkdir $YARN_CACHE_PATH
-RUN touch $YARN_CACHE_PATH/test
 
 RUN chown -R $STEMN_PIPELINE_UID:$STEMN_PIPELINE_GID $YARN_CACHE_PATH
 
