--- a/containers/email/package.json
+++ b/containers/email/package.json
@@ -31,7 +31,10 @@
     "request-promise": "^4.2.2"
   },
   "devDependencies": {
+    "@stemn/jest-config": "^0.0.2",
+    "@types/jest": "^23.3.1",
     "@types/node": "^10.7.1",
+    "jest": "^23.5.0",
     "nodemon": "^1.18.3",
     "typescript": "^3.0.1",
     "version-bump-prompt": "^4.0.0"
