fix upload start script

--- a/containers/upload/Dockerfile
+++ b/containers/upload/Dockerfile
@@ -1,6 +1,6 @@
-FROM node:10-alpine AS build
-
+FROM stemn/pipeline-base:latest
 WORKDIR /app
+
 ADD package.json package.json
 ADD yarn.lock yarn.lock
 RUN yarn install
@@ -11,7 +11,4 @@ RUN yarn build:typescript
 
 RUN yarn install --production
 
-FROM stemn/pipeline-base:latest
-COPY --from=build /app /app
-WORKDIR /app
-ENTRYPOINT yarn start
+ENTRYPOINT cd /app && yarn start
