--- a/containers/upload/package.json
+++ b/containers/upload/package.json
@@ -37,6 +37,7 @@
     "request-promise": "^4.2.2"
   },
   "devDependencies": {
+    "@stemn/jest-config": "^0.0.7",
     "@types/archiver": "^2.1.1",
     "@types/fs-extra": "^5.0.4",
     "@types/micromatch": "^3.1.0",
