--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
       - save_cache:
           paths: [node_modules]
           key: deps-{{ checksum "package.json" }}
-      - run: yarn lerna run build
+      - run: yarn build
       - persist_to_workspace:
           root: '.'
           paths: ["*"]
@@ -100,4 +100,3 @@ workflows:
           filters:
             tags: { only: /^v.*/ }
             branches: { ignore: /.*/ }
-
