--- a/containers/email/package.json
+++ b/containers/email/package.json
@@ -32,9 +32,11 @@
   },
   "devDependencies": {
     "@stemn/jest-config": "^0.0.9",
+    "@stemn/tslint-config": "^0.0.2",
     "@types/node": "^10.7.1",
     "nodemon": "^1.18.3",
     "ts-jest": "^23.1.4",
+    "tslint": "^5.11.0",
     "typescript": "^3.0.1",
     "version-bump-prompt": "^4.0.0"
   }
