--- a/containers/upload/package.json
+++ b/containers/upload/package.json
@@ -43,6 +43,7 @@
     "@types/node": "^10.7.1",
     "@types/node-fetch": "^2.1.2",
     "changelog-verify": "^1.1.0",
+    "tslint": "^5.11.0",
     "typescript": "^3.0.1",
     "version-bump-prompt": "^4.0.0",
     "version-changelog": "^3.1.0"
