--- a/containers/upload/Dockerfile
+++ b/containers/upload/Dockerfile
@@ -1,13 +1,13 @@
 FROM stemn/pipeline-base:latest as build
 WORKDIR /app
 
-ADD package.json package.json
-ADD yarn.lock yarn.lock
+COPY package.json package.json
+COPY yarn.lock yarn.lock
 RUN yarn install
 
-ADD tsconfig.json tsconfig.json
-ADD src src
-ADD scripts scripts
+COPY tsconfig.json tsconfig.json
+COPY src src
+COPY scripts scripts
 RUN yarn build:typescript || true
 
 RUN yarn install --production
